--- a/q3.html
+++ b/q3.html
@@ -10,11 +10,11 @@
 </head>
 
 <body>
-    <div>
+    <div >
 
-
+        
         <form action="./backend.php">
-            <fieldset>
+            <fieldset class="bg_img">
                 <legend >
                     <h1 class="heading">Sign-up</h1>
                 </legend>
@@ -42,7 +42,8 @@
                 <label for="confirmPassword">Confirm Password:</label>
                 <input type="password" name="password" id="password" placeholder="********" maxlength="8">
                 <br><br>
-                <input type="checkbox" name="t&c" id="t&c" value="t&c">Terms and Conditions
+                <input type="checkbox" name="t&c" id="t&c" value="t&c">
+                <label for="t&c">Terms and Conditions</label>
                 <br><br>
                 <input type="submit" name="submit" id="submit">
                 <br>
